--- a/package.json
+++ b/package.json
@@ -11,17 +11,18 @@
     "type": "git",
     "url": "git+https://github.com/codesandbox-app/static-template.git"
   },
-  "keywords": [
-    "static",
-    "template",
-    "codesandbox"
-  ],
+  "keywords": ["static", "template", "codesandbox"],
   "author": "Ives van Hoorne",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/codesandbox-app/static-template/issues"
   },
   "homepage": "https://github.com/codesandbox-app/static-template#readme",
+  "dependencies": {
+    "bootstrap": "^4.6.0",
+    "jquery": "^3.5.1",
+    "poper": "^0.1.1"
+  },
   "devDependencies": {
     "serve": "^11.2.0"
   }
